# trajectory_generator

./: CMakeLists.txt  README.md  package.xml
config/: params.yaml
include/trajectory_generator/: trajectory_generator_node.hpp
include/trajectory_generator/trajectories/: Circle.hpp  Figure8.hpp  Line.hpp  Trajectory.hpp
launch/: trajectory_generator.launch.py
src/: trajectory_generator_node.cpp
src/trajectories/: Circle.cpp  Figure8.cpp  Line.cpp
