<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trajectory_generator</name>
  <version>2.0.0</version>
  <description>Trajectory generator for ground robots. Generates Circle and Line trajectories as nav_msgs/Path. Ported from ROS1 ACL snap stack trajectory generator.</description>
  <maintainer email="kkondo@mit.edu">kkondo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <build_depend>eigen3_cmake_module</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
